// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing SignIn FAIL submit sign-in form failed 1`] = `
<body>
  <div>
    <section
      class="css-zaafzq"
    >
      <section
        class="css-1prn45"
      >
        <button
          class="css-1640pth"
          title="language select"
          value="ru"
        >
          <img
            class="css-zlc08d"
            src="test-file-stub"
          />
        </button>
      </section>
      <form
        class="css-1tcowfc"
        novalidate=""
      >
        <p
          class="css-8vza8i"
        >
          Войти в свой аккаунт
        </p>
        <div
          style="color: red;"
        >
          Email или пароль не корректный
        </div>
        <div
          class="css-xf3brg"
          data-testid="signin-form"
        >
          <div
            class="css-ahns2k"
          >
            <label
              class="css-12e7qyv"
            >
              <span
                class="css-fxi74e"
              >
                Почта
                *
              </span>
              <input
                class="css-d17r1a"
                name="email"
                placeholder="Введите почту..."
                required=""
                type="email"
                value="alex_vovkin@mail.ru"
              />
            </label>
          </div>
          <div
            class="css-ahns2k"
          >
            <label
              class="css-12e7qyv"
            >
              <span
                class="css-fxi74e"
              >
                Пароль
                *
              </span>
              <input
                autocomplete="off"
                class="css-d17r1a"
                name="password"
                placeholder="Введите пароль..."
                required=""
                type="password"
                value="any password"
              />
            </label>
          </div>
        </div>
        <div
          class="css-dpf4m3"
        >
          <p
            class="css-1ewewco"
          >
            Нет аккаунта?
            <a
              class="css-bcl8fr"
              href="/easy-project/registration"
            >
              Зарегистрироваться
            </a>
          </p>
        </div>
        <button
          class="css-1915s5n"
          type="submit"
        >
          Войти
        </button>
      </form>
    </section>
  </div>
</body>
`;

exports[`Testing SignIn SUCCESS check sign-in component render 1`] = `
<div>
  <section
    class="css-zaafzq"
  >
    <section
      class="css-1prn45"
    >
      <button
        class="css-1640pth"
        title="language select"
        value="ru"
      >
        <img
          class="css-zlc08d"
          src="test-file-stub"
        />
      </button>
    </section>
    <form
      class="css-1tcowfc"
      novalidate=""
    >
      <p
        class="css-8vza8i"
      >
        Войти в свой аккаунт
      </p>
      <div
        class="css-xf3brg"
        data-testid="signin-form"
      >
        <div
          class="css-ahns2k"
        >
          <label
            class="css-12e7qyv"
          >
            <span
              class="css-fxi74e"
            >
              Почта
              *
            </span>
            <input
              class="css-d17r1a"
              name="email"
              placeholder="Введите почту..."
              required=""
              type="email"
              value=""
            />
          </label>
        </div>
        <div
          class="css-ahns2k"
        >
          <label
            class="css-12e7qyv"
          >
            <span
              class="css-fxi74e"
            >
              Пароль
              *
            </span>
            <input
              autocomplete="off"
              class="css-d17r1a"
              name="password"
              placeholder="Введите пароль..."
              required=""
              type="password"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="css-dpf4m3"
      >
        <p
          class="css-1ewewco"
        >
          Нет аккаунта?
          <a
            class="css-bcl8fr"
            href="/easy-project/registration"
          >
            Зарегистрироваться
          </a>
        </p>
      </div>
      <button
        class="css-1915s5n"
        type="submit"
      >
        Войти
      </button>
    </form>
  </section>
</div>
`;

exports[`Testing SignIn SUCCESS submit sign-in form success 1`] = `
<div
  class="css-xf3brg"
  data-testid="signin-form"
>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Почта
        *
      </span>
      <input
        class="css-d17r1a"
        name="email"
        placeholder="Введите почту..."
        required=""
        type="email"
        value="alex_vovkin@mail.ru"
      />
    </label>
  </div>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Пароль
        *
      </span>
      <input
        autocomplete="off"
        class="css-d17r1a"
        name="password"
        placeholder="Введите пароль..."
        required=""
        type="password"
        value="12121992"
      />
    </label>
  </div>
</div>
`;

exports[`Testing SignIn SUCCESS submit sign-in form with incorrect email 1`] = `
<div
  class="css-xf3brg"
  data-testid="signin-form"
>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Почта
        *
      </span>
      <input
        class="css-d17r1a"
        name="email"
        placeholder="Введите почту..."
        required=""
        type="email"
        value="any email"
      />
    </label>
    <p
      class="css-11un70f"
    >
      Почта или пароль введены неправильно
    </p>
  </div>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Пароль
        *
      </span>
      <input
        autocomplete="off"
        class="css-d17r1a"
        name="password"
        placeholder="Введите пароль..."
        required=""
        type="password"
        value=""
      />
    </label>
    <p
      class="css-11un70f"
    >
      Поле не должно быть пустым
    </p>
  </div>
</div>
`;

exports[`Testing SignIn SUCCESS submit sign-in form with only login 1`] = `
<div
  class="css-xf3brg"
  data-testid="signin-form"
>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Почта
        *
      </span>
      <input
        class="css-d17r1a"
        name="email"
        placeholder="Введите почту..."
        required=""
        type="email"
        value="alex_vovkin@mail.ru"
      />
    </label>
    
  </div>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Пароль
        *
      </span>
      <input
        autocomplete="off"
        class="css-d17r1a"
        name="password"
        placeholder="Введите пароль..."
        required=""
        type="password"
        value=""
      />
    </label>
    <p
      class="css-11un70f"
    >
      Поле не должно быть пустым
    </p>
  </div>
</div>
`;

exports[`Testing SignIn SUCCESS submit sign-in form with only password 1`] = `
<div
  class="css-xf3brg"
  data-testid="signin-form"
>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Почта
        *
      </span>
      <input
        class="css-d17r1a"
        name="email"
        placeholder="Введите почту..."
        required=""
        type="email"
        value=""
      />
    </label>
    <p
      class="css-11un70f"
    >
      Поле не должно быть пустым
    </p>
  </div>
  <div
    class="css-ahns2k"
  >
    <label
      class="css-12e7qyv"
    >
      <span
        class="css-fxi74e"
      >
        Пароль
        *
      </span>
      <input
        autocomplete="off"
        class="css-d17r1a"
        name="password"
        placeholder="Введите пароль..."
        required=""
        type="password"
        value="12121992"
      />
    </label>
    
  </div>
</div>
`;
